--- a/imdb/src/Components/Coloum4/Coloum4.css
+++ b/imdb/src/Components/Coloum4/Coloum4.css
@@ -8,9 +8,43 @@
     background: #181a20;
     height: 300px;
     color: #fff;
+    overflow-y: scroll;
+    display: flex;
+    flex-direction:column;
+    gap: 20px;
+}
+.reviews::-webkit-scrollbar, .subscription::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+    background-color: transparent;
+}
+.review, .subs{
+    width: 90%;
+    height: 80px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: space-between;
+}
+.reviews>p, .subscription>p{
+    margin-left: 20px;
+}
+.review>img, .subs>img{
+    width: 28%;
+    height: 80px;
+    border-radius: 20px;
+}
+.review>div, .subs>div{
+    width: 65%;
+}
+.review>div>p, .subs>div>p{
+    margin-top: 4px;
 }
 .subscription{
     background: #181a20;
     height: 700px;
     color: #fff;
+    overflow-y: scroll;
+    display: flex;
+    flex-direction:column;
+    gap: 20px;
 }
