--- a/imdb/src/Components/Coloum2/Coloum2.css
+++ b/imdb/src/Components/Coloum2/Coloum2.css
@@ -8,9 +8,60 @@
     background: #181a20;
     height: 600px;
     color: #fff;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items:center;
+    overflow-y: scroll;
+}
+.searchMovies::-webkit-scrollbar, .popularMovies::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+    background-color: transparent;
 }
 .popularMovies{
     background: #181a20;
     height: 400px;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items:center;
+    overflow-y: scroll;
     color: #fff;
+}
+.searchMovie{
+    width: 85%;
+    display: flex;
+    justify-content: space-between;
+}
+.searchMovie>img{
+    width: 30%;
+    border-radius: 10px;
+}
+.searchMovie>div{
+    width: 65%;
+}
+.searchMovie>div>p{
+    margin-top: 5px;
+    font-size: 10px;
+}
+.search{
+    margin: 15px;
+    padding: 15px;
+    border-radius: 10px;
+    border: none;
+    background:#262a34;
+    color: #fff;
+    outline: none;
+}
+.popularMovies>input{
+    margin: 15px;
+    padding: 15px;
+    border-radius: 10px;
+    border: none;
+    background:#262a34;
+    color: #fff;
+    outline: none;
+    margin-left: 20px;
+    margin-top: 20px;
 }
