--- a/imdb/src/Components/Coloum3/Coloum3.css
+++ b/imdb/src/Components/Coloum3/Coloum3.css
@@ -8,9 +8,63 @@
     background: #181a20;
     height: 500px;
     color: #fff;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items:center;
+    overflow-y: scroll;
+}
+.letestMovies::-webkit-scrollbar, .upcomingMovies::-webkit-scrollbar, .trendingMovies::-webkit-scrollbar, .upcomingMovies::-webkit-scrollbar {
+    width: 0;
+    height: 0;
+    background-color: transparent;
 }
 .trendingMovies{
     background: #181a20;
     height: 500px;
     color: #fff;
+}
+.latestMovies{
+    background: #181a20;
+    height: 400px;
+    color: #fff;
+}
+.latestMovie{
+    width: 85%;
+    display: flex;
+    justify-content: space-between;
+}
+.latestMovie>img{
+    width: 30%;
+    border-radius: 10px;
+}
+.latestMovie>div{
+    width: 65%;
+}
+.latestMovie>div>p{
+    margin-top: 5px;
+    font-size: 10px;
+}
+.trendingMovies{
+    background: #181a20;
+    height: 500px;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    gap: 20px;
+    align-items:center;
+    overflow-y: scroll;
+}
+.trendingMovie{
+    width: 45%;
+    display: flex;
+    flex-direction: column;
+    margin: auto;
+    text-align: center;
+}
+.trendingMovie>img{
+    border-radius: 10px;
+}
+.trendingMovie>img{
+    border-radius: 10px;
 }
